Rewrite deprecated URL for DetectMain
Based on: https://stackoverflow.com/questions/75966165/how-to-replace-the-deprecated-url-constructors-in-java-20